--- a/scss/partials/_general.scss
+++ b/scss/partials/_general.scss
@@ -1,5 +1,5 @@
 body{
- background-image:linear-gradient(to right bottom,#fbdb89,#f48982) ; 
+ background-image:$gradient; 
  background-repeat: no-repeat;
  height: 100vh;  
 }
