add typogprahy styles

--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -4,3 +4,4 @@ $textColor:#615551;
 $darkOrange:#f38e82;
 $lightGray:#f2efee;
 $gradient:linear-gradient(to right bottom,#fbdb89,#f48982) ;
+$desktop:800px;
