--- a/scss/main.css
+++ b/scss/main.css
@@ -1,7 +1,65 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700&display=swap");
+*, ::after, ::before {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+
 body {
   background-image: -webkit-gradient(linear, left top, right bottom, from(#fbdb89), to(#f48982));
   background-image: linear-gradient(to right bottom, #fbdb89, #f48982);
   background-repeat: no-repeat;
   height: 100vh;
+  color: #615551;
+  font-family: Nunito Sans,sans-serif;
+  letter-spacing: 1px;
+  line-height: 1.3;
+}
+
+ul {
+  list-style: none;
+}
+
+p {
+  font-size: 1.4rem;
+}
+
+h1 {
+  font-size: 2.1rem;
+}
+
+h2 {
+  font-size: 1.8rem;
+}
+
+h3 {
+  font-size: 1.7rem;
+}
+
+h4 {
+  font-size: 1.6rem;
+}
+
+@media screen and (min-width: 800px) {
+  p {
+    font-size: 1.7rem;
+  }
+  h1 {
+    font-size: 3rem;
+  }
+  h2 {
+    font-size: 2.4rem;
+  }
+  h3 {
+    font-size: 2rem;
+  }
+  h4 {
+    font-size: 1.8rem;
+  }
 }
 /*# sourceMappingURL=main.css.map */
