--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700&display=swap');
 @import './partials/variables';
-@import './partials/mixins';
 @import './partials/general';
+@import './partials/mixins';
 @import './partials/typography';
+
+
+
+
