--- a/scss/partials/_general.scss
+++ b/scss/partials/_general.scss
@@ -1,5 +1,26 @@
+*,::after,::before{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+ html{
+    font-size: 62.5%;
+ }
+
 body{
  background-image:$gradient; 
  background-repeat: no-repeat;
  height: 100vh;  
+ color: $textColor;
+ font-family: Nunito Sans,sans-serif;
+ letter-spacing: 1px;
+ line-height: 1.3;
+}
+
+
+
+ul{
+    list-style: none;
 }
