--- a/scss/main.css
+++ b/scss/main.css
@@ -14,6 +14,7 @@ body {
   background-image: -webkit-gradient(linear, left top, right bottom, from(#fbdb89), to(#f48982));
   background-image: linear-gradient(to right bottom, #fbdb89, #f48982);
   background-repeat: no-repeat;
+  padding: 2rem;
   height: 100vh;
   color: #615551;
   font-family: Nunito Sans,sans-serif;
@@ -21,8 +22,21 @@ body {
   line-height: 1.3;
 }
 
+.container {
+  background-color: #f9f5f3;
+  height: 80vh;
+  margin: 3rem auto;
+  max-width: 120rem;
+  border-radius: 10px;
+}
+
 ul {
   list-style: none;
+}
+
+img {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 p {
@@ -61,5 +75,137 @@ h4 {
   h4 {
     font-size: 1.8rem;
   }
+}
+
+.btn {
+  padding: 16px 30px;
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#fbdb89), to(#f48982));
+  background-image: linear-gradient(to right bottom, #fbdb89, #f48982);
+  border: 0;
+  border-radius: 30px;
+  color: white;
+  cursor: pointer;
+  text-transform: uppercase;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 1.2rem;
+  letter-spacing: 1px;
+  -webkit-transition: 0.4s -webkit-transform;
+  transition: 0.4s -webkit-transform;
+  transition: 0.4s transform;
+  transition: 0.4s transform, 0.4s -webkit-transform;
+}
+
+.btn:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+@media screen and (min-width: 800px) {
+  .btn {
+    padding: 20px 40px;
+  }
+}
+
+.btn svg {
+  height: 1.5rem;
+  width: 1.5rem;
+  fill: currentColor;
+}
+
+.btn .search__icon {
+  margin-right: 8px;
+}
+
+.btn .direction__icon {
+  margin-left: 5px;
+}
+
+.btn__direction {
+  padding-inline: 24px;
+}
+
+@media screen and (min-width: 800px) {
+  .btn__direction {
+    padding-inline: 30px;
+  }
+}
+
+.btn .upload__icon {
+  margin-right: 5px;
+}
+
+.nav {
+  padding: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav__logo {
+  height: 4rem;
+}
+
+.nav__searchBox {
+  width: 35%;
+  background-color: white;
+  border-radius: 30px;
+  display: inherit;
+  -webkit-box-pack: inherit;
+      -ms-flex-pack: inherit;
+          justify-content: inherit;
+  overflow: hidden;
+}
+
+.nav__searchBox input {
+  border: 0;
+  width: 90%;
+  padding-left: 2rem;
+  outline: none;
+  margin-right: 2rem;
+}
+
+.nav__links {
+  display: inherit;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav__links #addRecipe {
+  font-size: 3rem;
+}
+
+.nav__links p {
+  margin-inline: 10px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.3rem;
+}
+
+.nav__links img {
+  height: 2rem;
+}
+
+.nav__link {
+  display: inherit;
+  cursor: pointer;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-inline: 1rem;
 }
 /*# sourceMappingURL=main.css.map */
