--- a/scss/partials/_general.scss
+++ b/scss/partials/_general.scss
@@ -12,6 +12,7 @@
 body{
  background-image:$gradient; 
  background-repeat: no-repeat;
+ padding: 2rem;
  height: 100vh;  
  color: $textColor;
  font-family: Nunito Sans,sans-serif;
@@ -19,8 +20,18 @@ body{
  line-height: 1.3;
 }
 
-
+.container{
+    background-color: $headerBg;
+    height: 80vh;
+    margin: 3rem auto;
+    max-width: 120rem;
+    border-radius: 10px;
+}
 
 ul{
     list-style: none;
+}
+
+img{
+  object-fit: cover;    
 }
