create the navbar

--- a/scss/main.css
+++ b/scss/main.css
@@ -207,5 +207,15 @@ h4 {
       -ms-flex-align: center;
           align-items: center;
   margin-inline: 1rem;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+  height: 120%;
+}
+
+.nav__link:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 /*# sourceMappingURL=main.css.map */
