--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,59 +4,33 @@
 @import './partials/mixins';
 @import './partials/typography';
 @import './partials/btn';
+@import './partials/nav';
 
-.nav{
-    padding: 1rem;
-    @include flex-between(center);
-    &__logo{
-        height: 4rem;
-    }
-  
-    &__searchBox{
-        width: 35%;
-        background-color: white;
-        border-radius: 30px;
-        display: inherit;
-        justify-content: inherit;
-        overflow: hidden;
-        input{
-            border: 0;
-            // border-radius:inherit;
-            width: 90%;
-            padding-left: 2rem;
-            outline: none;
-            margin-right: 2rem;
-        }
-    }
-
-
- &__links{
-   display: inherit;
-   align-items: center;
-   #addRecipe{
-    font-size: 3rem;
-   }
-p{
-    margin-inline: 10px;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 1.3rem;
-}
-   img{
-       height: 2rem;
-    }
+main{
+    display: grid;
+    grid-template-columns: 350px 1fr;
 }
 
-&__link{
- display: inherit;
- cursor: pointer;
- align-items:center;
- margin-inline: 1rem;
-// padding-block: 3rem;
-transition: transform 0.3s;
- height: 120%;
- &:hover{
-   transform: scale(1.1);
- }
+.recipeContainer{
+    background-color: white;
+    height: 50vh;
 }
+
+.recipeIngredientContainer{
+    padding: 2rem;
+    img{
+        height: 2rem;
+    }
+    .searchMsgBox{
+        display: flex;
+        position: relative;
+        left: 30%;
+        top: 3rem;
+    }
+    p{
+         text-align: center;
+         font-weight: 600;
+         width: 50%;
+         margin-left: 1rem;
+    }
 }
