--- a/scss/main.css
+++ b/scss/main.css
@@ -219,6 +219,43 @@ h4 {
           transform: scale(1.1);
 }
 
+.loader {
+  border: 4px solid #f3f3f3;
+  /* Light grey */
+  border-top: 4px solid #f38e82;
+  /* Blue */
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  -webkit-animation: spin 2s linear infinite;
+          animation: spin 2s linear infinite;
+  position: relative;
+  left: 30%;
+  top: 4rem;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
 main {
   display: -ms-grid;
   display: grid;
@@ -226,7 +263,7 @@ main {
       grid-template-columns: 350px 1fr;
 }
 
-.recipeContainer {
+.recipeResultContainer {
   background-color: white;
   height: 50vh;
 }
@@ -253,5 +290,14 @@ main {
   font-weight: 600;
   width: 50%;
   margin-left: 1rem;
+}
+
+.hidden {
+  display: none;
+}
+
+.errorMsg {
+  font-weight: 600;
+  padding: 3rem 4rem;
 }
 /*# sourceMappingURL=main.css.map */
