create basic html for ingredientcontainer headert

--- a/scss/main.css
+++ b/scss/main.css
@@ -300,6 +300,8 @@ main {
 
 .recipeResultContainer {
   background-color: white;
+  height: 68vh;
+  overflow: hidden;
 }
 
 .recipeIngredientContainer {
