--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,9 +16,9 @@ main{
 
 .recipeResultContainer{
     background-color: white;
-    // height: 60vh;
+     height: 68vh;
     // height: 3rem;
-    
+    overflow: hidden;
 }
 
 .recipeIngredientContainer{
