--- a/scss/main.css
+++ b/scss/main.css
@@ -24,7 +24,7 @@ body {
 
 .container {
   background-color: #f9f5f3;
-  height: 80vh;
+  height: 100vh;
   margin: 3rem auto;
   max-width: 120rem;
   border-radius: 10px;
@@ -289,6 +289,41 @@ h4 {
 .recipe__publisher {
   font-size: 1.4rem;
   letter-spacing: 0;
+}
+
+.recipeIngredient__capacity {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.recipeIngredient__capacity .time-logo img {
+  height: 2rem;
+}
+
+.recipeIngredient__time-box {
+  display: inherit;
+}
+
+.recipe-bg {
+  width: 100%;
+  height: 300px;
+  margin-bottom: 2rem;
+  display: inline-block;
+}
+
+.recipeIngredient__servings {
+  display: inherit;
+}
+
+.recipeIngredient__servings img {
+  height: 2rem;
 }
 
 main {
