--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@
 @import './partials/nav';
 @import './partials/loader';
 @import './partials/recipes';
+@import './partials/ingredientInfo';
 main{
     display: grid;
     grid-template-columns: 350px 1fr;
