--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,7 +17,7 @@ main{
 
 .recipeResultContainer{
     background-color: white;
-     height: 68vh;
+    //  height: 68vh;
      
     // height: 3rem;
     overflow: hidden;
