change list title color

--- a/scss/main.css
+++ b/scss/main.css
@@ -352,6 +352,7 @@ img {
 
 .ingredientInfo__list-container h2 {
   margin-block: 3rem;
+  color: #f38e82;
 }
 
 .ingredientInfo__list-container li {
