--- a/scss/partials/_ingredientInfo.scss
+++ b/scss/partials/_ingredientInfo.scss
@@ -54,6 +54,7 @@ img{
     text-align: center;
     h2{
         margin-block: 3rem;
+        color: $darkOrange;
     }
     li{
         font-size: 1.8rem;
