--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,10 +17,8 @@ main{
 
 .recipeResultContainer{
     background-color: white;
-    //  height: 68vh;
+    height: 100%;
      
-    // height: 3rem;
-    overflow: hidden;
 }
 
 .recipeIngredientContainer{
@@ -51,4 +49,30 @@ main{
 .errorMsg{
     font-weight: 600;
     padding: 3rem 4rem;
+}
+
+
+.btn-controler{
+   padding:10px !important;
+   border: 0;
+   cursor: pointer;
+   background-color:$lightGray;
+   border-radius: 15px;
+   color: $darkOrange;
+   transition: 0.3s background;
+   &:hover{
+    background-color: rgba(204, 204, 204, 0.47);
+   }
+}
+
+.btn-controler-box{
+    display: flex;
+    padding: 1rem;
+    justify-content: space-between;
+}
+
+button[data-value='0']{
+    opacity: 0;
+    visibility: hidden;
+
 }
